Updated more readme

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-appdirs==1.4.4
-autopep8==1.5.3
-Bootstrap-Flask==1.4
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-dominate==2.5.1
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.3
-Flask-WTF==0.14.3
-idna==2.9
-itsdangerous==1.1.0
-jedi==0.17.1
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-parso==0.7.0
-prompt-toolkit==3.0.5
-pycodestyle==2.6.0
-Pygments==2.6.1
-requests==2.24.0
-SQLAlchemy==1.3.18
-toml==0.10.1
-urllib3==1.25.9
-visitor==0.1.3
-wcwidth==0.2.5
-Werkzeug==1.0.1
-WTForms==2.3.1
-psycopg2==2.8.5
+Bootstrap-Flask
+Flask
+Flask-SQLAlchemy
+Flask-WTF
+Jinja2
+MarkupSafe
+Pygments
+SQLAlchemy
+WTForms
+Werkzeug
+appdirs
+autopep8
+certifi
+chardet
+click
+dominate
 google-python-cloud-debugger
+idna
+itsdangerous
+jedi
+parso
+prompt-toolkit
+psycopg2
+pycodestyle
+requests
+toml
+urllib3
+visitor
+wcwidth
